<resources>
    <string name="app_name">MainApp</string>
    <string name="translate" translatable="false">العربية</string>
    <string-array name="customFonts">
        <item>geeza_pro_regular.otf</item>
        <item>graphik_medium.ttf</item>
        <item>graphik_regular.ttf</item>
        <item>graphik_semibold.ttf</item>
        <item>helvetica_neue_bold.ttf</item>
    </string-array>
    <string name="ok_txt">Ok</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_available">Upgrade available!</string>
    <string name="welcome_message">The latest version on COVID-19 app is now available. Upgrade today, to continue
        enjoying uninterrupted services from Department of Health.
    </string>
    <string name="api_key" translatable="false">AIzaSyBhg0xYMV8hKujRpKOjPiZqRIUR6DXCKUQ</string>
    <string name="news_detail">News Details</string>
    <string name="title_registration">Registration</string>
    <string name="arabic_name">العربية</string>
    <string name="registration_page_one_title">I am a...</string>
    <string name="registration_page_one_description">Please answer strictly based on your current visa status in the UAE</string>
    <string name="title_uae_citizen">UAE CITIZEN / RESIDENT</string>
    <string name="title_international_visitor">INTERNATIONAL VISITOR</string>
    <string name="registration_mobile_number">My mobile \nnumber is...</string>
    <string name="registration_static_number">+971</string>
    <string name="title_verify_number">Verify number</string>
    <string name="title_enter_verification_code">Please enter the verification code sent</string>
    <string name="title_code_activation">Code active for 30 seconds</string>
    <string name="title_resend_code">Resend Code</string>
    <string name="to_label">to:</string>
    <string name="code_active_status">Code active for 10 minutes</string>
    <string name="scan_emirates_id_again">Please scan the emirates I.D again</string>
    <string name="title_scan_em_id">Scan Emirates I.D. Front</string>
    <string name="message_upload_doc">Upload document instead</string>
    <string name="title_open_camera">OPEN CAMERA</string>
    <string name="message_keep_font">Keep the front of the card inside the frame and it will be scanned automatically</string>
    <string name="title_cancel">CANCEL</string>
    <string name="title_upload_doc">UPLOAD DOCUMENT</string>
    <string name="title_submit_front_scan">SUBMIT FRONT SCAN</string>
    <string name="title_validate_emiratesid">Validating Emirates I.D.</string>
    <string name="your_health">YOUR HEALTH</string>
    <string name="our_priority">OUR PRIORITY</string>
    <string name="combat_covid">COMBAT\nCOVID-19</string>
    <string name="find_out_more">FIND OUT MORE</string>
    <string name="help_our_country">Help our country control the spread of the CoVid19 virus and allow us to get back to our normal lives as soon as possible. By combining everyones efforts in sharing information, we will be stronger and can look out for each other.\n\nYou will now be asked to register your details and answer a few questions about symptoms, travel, and contact you’ve had with others.</string>
    <string name="centre_your_face">Centre your face to the screen</string>
    <string name="your_emirates_id">Your Emirates I.D. Details</string>
    <string name="continue_txt">Continue</string>
    <string name="photo_verification">Photo Verification</string>
    <string name="Video_verification">Video Verification</string>
    <string name="photo_verification_desc">We require a photo of you to help us validate your I.D. document</string>
    <string name="retake_txt">RETAKE</string>
    <string name="use_photo_txt">USE PHOTO</string>
    <string name="default_notification_channel_id">covid_notifications</string>
    <string name="default_notification_channel_name">covid_notifications_channel</string>
    <string name="add_family">Add Family</string>
    <string name="add_family_desc">It is required that all citizens are registered. Should your dependants not be able to do it themselves, you can do so on their behalf.</string>
    <string name="add_family_desc_sub">Please note that if you choose this option, you will be held responsible for them following the app\'s symptom screening results.</string>
    <string name="proceed_label">Proceede</string>
    <string name="add_location_txt">Add Location</string>
    <string name="add_emergency_contact_label">Add Emergency Contact</string>
    <string name="edit_emergency_contact_label">Edit Emergency Contact</string>
    <string name="mobile_number_label">Mobile Number</string>
    <string name="location_permission_message">You will have to allow Location permission in order to post your current
        location.\n\nYou can revoke the permission manually from Settings->Apps->Permissions
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_combat_covid">COMBAT COVID-19</string>
    <string name="your_status">YOUR STATUS</string>
    <string name="your_status_small">Your Status: </string>
    <string name="status_at_risk_text">Your self-assessment indicates you are</string>
    <string name="not_risk"> not currently at risk for COVID-19.</string>
    <string name="high_risk"> at high risk for contracting COVID-19.</string>
    <string name="what_should_i_do_now"><u>What should i do now?</u></string>
    <string name="what_should_i_do"><u>What should i do </u></string>
    <string name="get_help">GET HELP</string>
    <string name="help_details">If your symptoms get worse call the number 24 hours a day below to seek immediate medical help.</string>
    <string name="estijaba_service">Estijaba service</string>
    <string name="departmet_health">at Department of Health</string>
    <string name="emergency_call">For emergencies please call 999</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="emirates_id">EMIRATES I.D. NO</string>
    <string name="primary_location">PRIMARY LOCATION</string>
    <string name="emergency_contact_label">EMERGENCY CONTACT</string>
    <string name="i_agree_with">I agree with the</string>
    <string name="txt_terms_and_conditions_label">Terms &amp; Conditions</string>
    <string name="confirm_account">CONFIRM ACCOUNT</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="proceed_to_self_assesment">PROCEED TO SELF-ASSESSMENT</string>
    <string name="title_submit_back_scan">SUBMIT BACK SCAN</string>
    <string name="title_upload_back">Upload back image</string>
    <string name="message_upload_back">Upload back image</string>
    <string name="emergency_contact_error">Emergency contact cannot be same as your mobile number.</string>
    <string name="self_assesment_title">Self-Assessment</string>
    <string name="title_assesment_question">Self-Assessment  Questions</string>
    <string name="sub_title_question">What types of questions?</string>
    <string name="questions_text">In this section you will be asked a series of simple questions that will help determine the exposure you might have had to the virus.</string>
    <string name="sub_title_resut">What is the result?</string>
    <string name="results_text">Based on your answers, you will be assigned a color code that represents the risk level that you have and hence the actions that you should take to look after yourself as well as others.</string>
    <string name="start_assesment">START ASSESSMENT</string>
    <string name="back_with_bracket"><![CDATA[< Back]]></string>
    <string name="next_with_bracket"><![CDATA[Next >]]></string>
    <string name="finish">Finish</string>
    <string name="title_assesment_results">Self-Assessment Results</string>
    <string name="results_desciption">Your information is extremely valuable and together with that of many others will help us win the battle over COVID-19.</string>
    <string name="please_answer_all_questions">Please answer all questions</string>
    <string name="location_updated" translatable="false">Location Updated: %1$s</string>
    <string name="cameera_permission_message">You will have to allow camera permission in order to scan emirates ID.\n\nYou can revoke the permission manually from Settings->Apps->Permissions
    </string>
    <string name="question_label">Question</string>
    <string name="of_label">of</string>
    <string name="search">Search</string>
    <string name="emirates_id_label">Emirates ID No</string>
    <string name="remove_location_updates">remove location</string>
    <string name="launch_activity">launch_activity</string>
    <string name="message_reg_unsuccessfull">Registration
        Un-Successful</string>
    <string name="something_went_wrong">Sorry, something went wrong</string>
    <string name="first_number_validateion">First name should be at least 5 characters</string>
    <string name="last_name_validateion">Last name should be at least 5 characters</string>
    <string name="emirates_number_validateion">Emirates number should be at least 15 numbers without "-"</string>
    <string name="turn_on_location">Please turn on your location</string>
    <string name="retake_assement_title">Re-take\nSelf-Assessment</string>
    <string name="retaike_question_title">You can re-take the asssessment for 2 reasons:</string>
    <string name="retake_question_description">1. If you feel like your results are incorrect  \n\n2. It’s been over 7 days since your last assessment, and you are required to re-take the assessment.</string>
    <string name="retake_assement">RE-TAKE ASSESSMENT</string>
    <string name="chracters_not_allowed">Chracters not allowed</string>
    <string name="retake_assement_detail">If you feel like your results need to be fixed, you can <font fgcolor='#11A532'> <u>retake the self-assessment</u>.</font></string>
    <string name="your_status_is">Your Status is</string>
    <string name="what_your_status_means">What your status means</string>
    <string name="based_on_your_answer_green">Based on your answers, you are at a lower risk of contracting COVID-19.</string>
    <string name="based_on_your_answer_red">Based on your answers, you are at a higher risk of contracting COVID-19 and we recommend speaking to a medical professional about getting tested.</string>
    <string name="based_on_your_answer_yellow">Based on your self-assessment answers, you are at a higher risk of contracting COVID-19 and we recommend speaking to Health Services about getting tested. </string>
    <string name="steps_to_help">Here are some steps to help you continue to protect yourself:</string>
    <string name="should_do_positive">Your results confirm that you have tested <b>positive</b> for COVID-19.\n\nWhile this is likely to be a very worrying time for you and your family, by following the steps below you will find it easier to cope with the quarantine phase and will protect yourself and others.
</string>
    <string name="should_do_negative">Your results confirm that you have tested <b>negative</b> for COVID-19.\n\nFor the safety of yourself and others, you are still advised to adopt self quarantine measures. This will allow us to continue to monitor your health and any change in symptoms.
</string>
    <string name="your_next_steps">Your next steps</string>
    <string name="what_should">What you should do</string>
    <string name="ensure_you_are_isolating">Ensure you are isolating yourself from others. By doing so, you can slow the spread of COVID-19 and protect your family, friends and community.</string>
    <string name="txt_login">Login</string>
    <string name="agency">Agency</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="inspector_app">Inspector App</string>
</resources>